# c18-55-m-python-react

./: Nombrar_ramas.md  README.md  Setup.ps1  Setup.sh
Docs/: nombrar_ramas.md
backend/: .editorconfig  .env-example  README.md  pyproject.toml
backend/api/api/: settings.py
backend/api/rentxpress/: admin.py  apps.py  models.py
backend/api/rentxpress/migrations/: 0001_initial.py
rentxpress/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
rentxpress/src/app/: globals.css  layout.tsx  page.tsx
rentxpress/src/app/components/home/loader/: main-load.tsx
rentxpress/src/app/components/home/main/: main-cars.tsx  main-corp.tsx  main-footer.tsx  main-form.tsx  main-info-img.tsx  main-info.tsx  main-menu.tsx  main-vectors.tsx  main-why-select.tsx
rentxpress/src/app/css/: animations.css  style.css
rentxpress/src/app/json/: fake-data.json
rentxpress/src/components/about-us/: about-us.tsx  card.tsx
rentxpress/src/components/arrendatario/: cm_arrendatario.tsx
rentxpress/src/components/contactanos/: contacta.tsx  map.tsx
rentxpress/src/components/home/loader/: main-load.tsx
rentxpress/src/components/home/main/: main-cars.tsx  main-corp.tsx  main-footer.tsx  main-form.tsx  main-info-img.tsx  main-info.tsx  main-menu.tsx  main-why-select.tsx
rentxpress/src/components/questions/: preguntas.tsx
rentxpress/src/pages/: _app.tsx  _document.tsx  arrendatario.tsx  contactanos.tsx  home.tsx  index.tsx  nosotros.tsx  pagina3.tsx  pagina4.tsx  pagina5.tsx  preguntas.tsx
rentxpress/src/styles/: globals.css
