[tool.poetry]
package-mode = false
name = "rentxpress api"
version = "0.1.0"
description = "Servidor para el cliente RentXpress"
authors = ["Julio David Benitez Rios <113691935+Mbarakaj4@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.0.8"
psycopg2 = "^2.9.9"
pytest = "^8.2.0"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
markdown = "^3.6"
django-filter = "^24.2"
django-guardian = "^2.4.0"
pygments = "^2.18.0"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
